# magiclaw

./: .gitignore  LICENSE  README.md  get_pretrained_models.sh  install.sh  process_timing_diagram.md  pyproject.toml  setup.sh
config/: bilateral.yaml
config/camera/: maixcam-9674.yaml  maixcam-a3a3.yaml  maixcam-e5b8.yaml
config/claw/: claw_0.yaml  claw_1.yaml
configs_example/: bilateral.yaml  detetor.yaml  magiclaw_0.yaml  magiclaw_1.yaml
configs_example/camera/: maixcam-xxxx.yaml
configs_example/claw/: claw_0.yaml  claw_1.yaml
configs_example/phone/: phone_0.yaml
magiclaw/: __init__.py  __version__.py  magiclaw.py
magiclaw/cli/: __init__.py  run.py
magiclaw/config/: __init__.py  camera_cfg.py  claw_cfg.py  detector_cfg.py  fingernet_cfg.py  motor_cfg.py  phone_cfg.py  zmq_cfg.py
magiclaw/configs/: detector_cfg.py
magiclaw/devices/camera/: __init__.py  usbcamera.py  webcamera.py
magiclaw/devices/claw/: __init__.py  claw.py
magiclaw/models/: __init__.py  fingernet.py
magiclaw/modes/: __init__.py  standalone.py  teleoperation.py
magiclaw/modules/protobuf/: cam_msg.proto  cam_msg_pb2.py  claw_msg.proto  claw_msg_pb2.py  finger_msg.proto  finger_msg_pb2.py  magiclaw_msg.proto  magiclaw_msg_pb2.py  phone_msg.proto  phone_msg_pb2.py
magiclaw/modules/zmq/: __init__.py  camera.py  claw.py  finger.py  magiclaw.py  phone.py
magiclaw/scripts/: standalone.py  teleoperation.py
magiclaw/utils/: logging_utils.py  math_utils.py  nn_utils.py  process_utils.py
scripts/: calib2yaml.m  calibrate_camera.py  calibrate_claw.py  run_magiclaw.py  scan_devices.py  test_camera.py  test_claw.py  test_fingernet.py  test_phone.py
tests/: test_camera.py  test_claw.py  test_fingernet.py  test_phone.py
